Fix alignment and positioning of success/failure messages.

--- a/public/stylesheets/app/editor/output.less
+++ b/public/stylesheets/app/editor/output.less
@@ -425,13 +425,15 @@
 			}
 		}
 	}
-	.package-search-results {
-		.messages {
-			.alert {
-				margin-left: 18px;
-				margin-right: 28px;
-			}
+	.messages {
+		.alert {
+			margin-top: 2px;
+			margin-left: 2px;
+			margin-right: 12px;
+			margin-bottom: 0px;
 		}
+	}
+	.package-search-results {
 		.scroll-container {
 			max-height: 360px;
 			overflow: auto;
